fix image-cropper's bug and other bug

--- a/web-user/sass/main.scss
+++ b/web-user/sass/main.scss
@@ -16,6 +16,10 @@ body {
 h3 {
   font-size: .2rem;
 }
+//  修复 导致 vue-image-crop-upload 出现bug 的样式
+.vicp-wrap img{
+  max-width:none;
+}
 
 .el-button--mini {
   font-size: .12rem;
